<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Historial">

    <ImageView
        android:id="@+id/logo4"
        android:layout_width="327dp"
        android:layout_height="166dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wdl" />

    <TextView
        android:id="@+id/Bitacora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Bitacora"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorMessage"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/return1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="Return3"
        android:contentDescription="@string/Return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <ImageButton
        android:id="@+id/bttDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/bttDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo4"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/Mensaje"
        android:layout_width="406dp"
        android:layout_height="436dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bitacora" />

    <ListView
        android:id="@+id/mensaje"
        android:layout_width="414dp"
        android:layout_height="438dp"
        android:layout_marginTop="280dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:cacheColorHint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/Mensaje"
        app:layout_constraintEnd_toEndOf="@+id/Mensaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo4" />

    <Spinner
        android:id="@+id/spinnerMeses"
        android:layout_width="129dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/bttDelete"
        app:layout_constraintTop_toBottomOf="@+id/logo4" />

    <Spinner
        android:id="@+id/spinnerDias"
        android:layout_width="129dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/spinnerMeses"
        app:layout_constraintTop_toBottomOf="@+id/logo4" />


</androidx.constraintlayout.widget.ConstraintLayout>